2007-05-27 Mathieu Blondel <mblondel@users.sourceforge.net>

- Fixed the problem with articles having special characters like & (article.py).

- Made the man page optional in the install process (setup.py).

- Check invalid characters in article name. (fs.py)

=== WikipediaFS 0.3 ===

2007-05-26 Mathieu Blondel <mblondel@users.sourceforge.net>

- Fixed a little problem in article.py. Spaces in article name must be replaced
with underscores.

- Section of manpage should be 1, not 8. gzip man page with -9 option.

2007-05-24 Csaba Henk <csaba.henk@creo.hu>

- Fixed misindentation and left the '-s' option unhandled in mount.wikipediafs.

2007-05-22 Mathieu Blondel <mblondel@users.sourceforge.net>

- Updated README and manpage.
- Fixed mount from fstab.
- Updated site with new content and screenshot (+japanese translation)

2007-05-21 Mathieu Blondel <mblondel@users.sourceforge.net>

- Introduced MetaDir (metadir.py).

MetaDir allows to associate one directory with one class.
Therefore each directory can define its own behaviour in its own class.
It creates a higher level API so that we do not have do deal with
inodes and other low level data structures.
It takes care of editor files which can be a pain to deal with otherwise.

- Added fs.py, the actual logic of the file system, which uses MetaDir.

- Renamed the logger and config global variables to LOGGER and CONFIG resp. in
order to prevent confusion.

- Set default cache time to 30 seconds instead of 300 seconds. Too big cache
time may cause edit conflicts with people editing the same article.

- mkdir (wikipedia|wiktionary|wikiquote|wikibooks|wikisource)-lang (e.g.
mkdir wikipedia-fr) automatically sets a working directory for the concerned
site from the wikimedia foundation.

- Added subfolder support (yay !). Files must have .mw extension in order to
distinguish them from directories.

- Readded edit with login support.

- Readded mount.wikipediafs.

2007-05-19 Mathieu Blondel <mblondel@users.sourceforge.net>
