@@ -1,3 +1,7 @@
+2007-05-30 Mathieu Blondel <mblondel@users.sourceforge.net>
+
+- Set default cache timeif article-cache-time is not present in config.
+
 2007-05-27 Mathieu Blondel <mblondel@users.sourceforge.net>
 
 - Fixed the problem with articles having special characters like & (article.py).
